model Skill {
    id       String  @id @default(uuid())
    user_id  String
    name     String
    category String?
    level    String?

    created_at DateTime @default(now())
    updated_at DateTime @updatedAt

    // Relations
    user     User      @relation(fields: [user_id], references: [id], onDelete: Cascade)
    projects Project[]

    @@map("skills")
}
