enum Role {
  MEMBER
  ADMIN
  GUEST
}

model User {
  id                 String  @id @default(uuid())
  username           String  @unique
  email              String  @unique
  role               Role    @default(MEMBER)
  password_hash      String
  refresh_token_hash String?

  password_reset_token   String?   @unique
  password_reset_expires DateTime?

  email_verification_hash       String?
  email_verification_expires_at DateTime?
  is_verified                   Boolean   @default(false)

  is_active Boolean @default(true)

  deactivate_token   String?   @unique
  deactivate_expires DateTime?

  created_at DateTime @default(now())
  updated_at DateTime @updatedAt

  // back relation
  profile          Profile?
  social_links     SocialLink[]
  resume           Resume?
  experiences      Experience[]
  projects         Project[]
  skills           Skill[]
  educations       Education[]
  additional_info  AdditionalInfo[]
  contact_messages ContactMessage[]
  page_views       PageView[]
  posts            Post[]
}
